# crusader

./: README.md  initialize_apr.sh  setup_start.sh  start_apr.sh
backend/: pyproject.toml
backend/agents/clarity_agent/: Dockerfile
backend/agents/content_triage_agent/: Dockerfile
backend/agents/data_integrity_agent/: Dockerfile
backend/agents/ethics_agent/: Dockerfile
backend/agents/ethics_agent/app/: main.py
backend/agents/methodology_reviewer/: Dockerfile
backend/agents/methodology_reviewer/app/: main.py
backend/agents/plagiarism_detector/: Dockerfile
backend/agents/plagiarism_detector/app/: main.py  models.py  services.py
backend/agents/reproducibility_agent/: Dockerfile
backend/agents/statistical_reviewer/: Dockerfile
backend/config/: settings.py
backend/orchestrator/: Dockerfile
backend/orchestrator/app/: main.py  nodes.py
backend/shared/: utils.py
backend/shared/agents/: __init__.py
backend/shared/db/: __init__.py
backend/submission_api/app/: main.py  models.py  services.py
infra/: docker-compose.yml
